--- a/Sex8BlockExtension/Sex8BlockExtension/Base.lproj/Main.storyboard
+++ b/Sex8BlockExtension/Sex8BlockExtension/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13189.4"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13196"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
         <capability name="stacking Non-gravity area distributions on NSStackView" minToolsVersion="7.0" minSystemVersion="10.11"/>
     </dependencies>
@@ -675,8 +675,10 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="addressBg" destination="cii-TV-4ab" id="slZ-Yc-o5Z"/>
                         <outlet property="downloadAddress" destination="TV5-c8-Etj" id="hiA-zH-wwQ"/>
                         <outlet property="pageAddress" destination="7Qe-UQ-t4L" id="IeV-mO-2sC"/>
+                        <outlet property="pageBg" destination="C77-t5-IOV" id="5eb-k9-ENh"/>
                     </connections>
                 </viewController>
                 <customObject id="2DA-AG-wGD" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
